# allscripts

./: npu_check.py
custom_gather/: build.sh  pimpek_gather.json
custom_gather/aclnn_run/: CMakeLists.txt  debug_pimpek.sh  main.cpp
deberta/: README.md  deberta_v3_base.py  model_size.py  requirements.txt  sample_attention.py
deberta/onnx/: check_num_gather.py  convert_deberta_ms_to_onnx.py
deberta/spec/other/: embedding_explained.xlsx  embeddings_sample.py  gather_index_plot.py  inspect_tensor_shapes.py  sample_attention_profile.py  save_tensor_shapes.py
deberta/spec/tb/: README.md  deberta_tensorboard.py
utils/: compile_ops_and_build_run.sh  copy_and_replace_Ascend.sh  dynamic_to_static_gather.py  npu_check.py  prepare_evn_aarch64.sh  profile_script.sh  simple_gather_test.py
